# SpiderGit

./: .env.example  .eslintrc.json  .gitignore  ARCHITECTURE.md  CHANGELOG.md  COMMIT_GUIDE.md  GitHub API  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  TESTING.md  cleanup-maimai.js  components.json  fix_missing_tags.py  jest.setup.js  next.config.js  package-lock.json  package.json  process_keywords.py  project-shell.ps1  reanalyze_keywords.py  run_analysis.bat  run_local_ci.py  simple_reanalyze.py  tailwind.config.js  test_analysis_fix.py  tsconfig.json  问题修复报告.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  simple-ci.yml
__tests__/api/: keywords.test.ts
__tests__/components/: Dashboard.test.tsx
app/: globals.css  layout.tsx  page.tsx
app/about/: page.tsx
app/daily/: page.tsx
app/dashboard/: page.tsx
app/keywords/: page.tsx
app/monthly/: page.tsx
app/testing/: page.tsx
app/trends/: page.tsx
app/weekly/: page.tsx
backend/: FIX_SUMMARY.md  README.md  pyproject.toml  test_fix.py
backend/requirements/: base.txt  dev.txt  test.txt
backend/scraper/: code_analyzer.py  keyword_scraper.py  main.py  requirements.txt  scheduler.py  time_series_trending_manager.py  trending_manager.py
backend/scraper/analyzers/: code_analyzer.py  data_analysis.py
backend/scraper/core/: api_client.py  token_manager.py
backend/scraper/crawlers/: github_trending_html.py  keyword_scraper.py  trending_crawler.py
backend/scraper/deprecated/: README.md  mock_data_generator.py  trending_crawler.py  trending_scheduler.py
backend/scraper/deprecated/utils/: network_diagnostic.py
backend/scraper/scripts/: analyze_existing_repos.py
cankao/: requirements.txt  scheduler.py
components/: charts-display.tsx  enhanced-library-analysis.tsx  keyword-cloud.tsx  language-trends-chart.tsx  library-analysis.tsx  library-stats.tsx  navbar.tsx  repository-card.tsx  repository-list.tsx  tag-analysis.tsx  trends-analysis.tsx  trends-navbar.tsx
components/ui/: card.tsx  charts.tsx  safe-tabs.tsx
config/: next.config.js
database/prisma/: schema-compatible.prisma  schema.prisma  seed.ts
docs/: AI_SETUP.md  API.md  ARCHITECTURE.md  ARCHITECTURE_COMPARISON.md  CHANGELOG.md  CODE_ANALYSIS_CONFIG.md  DEPLOYMENT.md  MIGRATION_GUIDE.md  QUICK_START.md  README.md  TESTING.md  USER_GUIDE.md
lib/: db.ts  python-resolver.ts
prisma/: schema.prisma  seed.ts
public/: readme.md
public/analytics/: analysis_Application_API.json  analysis_Cryptography_API.json  analysis_Estate API.json  analysis_Estate_API.json  analysis_Financial_API.json  analysis_Messaging_API.json  analysis_Monitoring_API.json  analysis_React.json  analysis_Search_API.json  analysis_Video_API.json  analysis_Visual_Recognition_API.json  analysis_block_chain.json  analysis_geoip.json  analysis_machine.json  analysis_maimai.json  analysis_mcp.json  analysis_mmdb.json  analysis_next.js.json  analysis_v2ray.json  regenerate_all.py  trends.json
public/result/: all_keywords_analysis.json
public/trends/: trends.json
results/: geoip_20250929_093534.json  geoip_20251021_175726.json  geoip_20251023_180006.json  mcp_20250928_171735.json  mmdb_20251016_094125.json
scraper/: code_analyzer.py  data_analysis.py  fetch_code_files.py  keyword_scraper.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_analysis.py  scheduler.py  simple_analysis.py  test_analysis.py  test_scraper.py
scraper/tests/: __init__.py  test_keyword_scraper.py
scripts/: init-db.js  run-tests.bat  run-tests.sh  test-setup.js
src/components/: CrawlerMonitor.tsx
src/types/: api.ts  components.ts  database.ts
tests/: README.md
tests/backend/: test_keyword_scraper.py
tests/frontend/: jest.config.js  jest.setup.js
tests/results/: test-results-2025-08-26T03-11-01-641Z.json  test-results-2025-08-26T03-32-49-747Z.json
tests/scripts/: connection-test.py  run-all-tests.py  (+3 more)
(+94 files in other folders)
